--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,25 @@ a {
   color: inherit;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
 
 ul,
@@ -25,7 +40,28 @@ ol {
   margin: 0;
 }
 
-/* __________ LOGO __________ */
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/*  LOGO  */
 
 .logo {
   font-family: Raleway;
@@ -40,10 +76,12 @@ ol {
   color: #4d5ae5;
 }
 
-/* __________ BUTTON __________ */
+/*  BUTTON  */
 
 .button {
+  padding: 16px 32px;
   cursor: pointer;
+  border: none;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #ffffff;
@@ -59,25 +97,37 @@ ol {
   background: #404bbf;
 }
 
-/* __________ TITILE __________ */
+/* SECTION */
+
+section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+section:nth-child(odd) {
+  background-color: #f4f4fd;
+}
+
+/*  TITILE  */
 
 .title {
+  margin-bottom: 72px;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.11;
   text-align: center;
 }
 
-/* __________ SUBTITLE __________ */
+/*  SUBTITLE  */
 
 .subtitle {
+  margin-bottom: 8px;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  text-align: center;
 }
 
-/* __________ CARD-TEXT __________ */
+/*  CARD-TEXT  */
 
 .card-text {
   color: #434455;
@@ -85,7 +135,29 @@ ol {
   line-height: 1.5;
 }
 
-/* __________ HEADER __________ */
+/*  HEADER  */
+header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+header .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 76px;
+}
+
+.menu {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  gap: 40px;
+}
 
 .menu-link {
   font-weight: 500;
@@ -95,6 +167,13 @@ ol {
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
+}
+
+.contacts {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: flex;
+  gap: 40px;
 }
 
 .contacts-link {
@@ -108,27 +187,102 @@ ol {
   color: #404bbf;
 }
 
-/* __________ HERO __________ */
+/*  HERO  */
 
-.hero {
+main .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
   background-color: #2e2f42;
 }
 
 .title-hero {
+  margin-bottom: 48px;
   color: #ffffff;
-
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
   text-align: center;
 }
 
-/* __________ ADVANTAGES __________ */
+.hero .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-/* __________ FOOTER __________ */
+/*  ADVANTAGES  */
+
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.advantage-item {
+  width: calc((100% - 24px * 3) / 4);
+}
+
+/* TEAM */
+
+.team .subtitle {
+  text-align: center;
+}
+
+.team .card-text {
+  text-align: center;
+}
+
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.team-member {
+  padding-bottom: 32px;
+  width: calc((100% - 24px * 3) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.team-photo {
+  margin-bottom: 32px;
+}
+
+/* PORTFOLIO */
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.portfolio-item {
+  width: calc((100% - 24px * 2) / 3);
+}
+
+.inner {
+  padding: 32px 16px;
+  border-bottom: 1px solid rgba(231, 233, 252, 1);
+  border-left: 1px solid rgba(231, 233, 252, 1);
+  border-right: 1px solid rgba(231, 233, 252, 1);
+}
+
+/*  FOOTER  */
 
 .footer {
   background-color: #2e2f42;
+}
+
+.footer .container {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer .logo {
@@ -136,7 +290,7 @@ ol {
 }
 
 .footer-text {
+  margin-top: 17px;
   color: #f4f4fd;
-
   line-height: 1.5;
 }
